--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "style-dictionary-sets-transform",
   "version": "0.0.0-development",
   "description": "Style Dictionary transforms to add support for sets for things like responsive design.",
-  "main": "index.js",
+  "main": "source/index.js",
+  "type": "module",
   "scripts": {
-    "test": "jest",
-    "test-watch": "jest --runInBand --watch",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test-watch": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand --watch",
     "pre-commit": "lint-staged",
     "prepare": "husky install",
     "semantic-release": "semantic-release"
@@ -23,10 +24,12 @@
   "devDependencies": {
     "@commitlint/cli": "^14.1.0",
     "@commitlint/config-conventional": "^14.1.0",
+    "fs-extra": "^10.0.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "lint-staged": ">=10",
     "prettier": "^2.4.1",
-    "semantic-release": "^18.0.0"
+    "semantic-release": "^18.0.0",
+    "style-dictionary": "^3.0.3"
   }
 }
