--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "style-dictionary-sets-transform",
+  "name": "style-dictionary-sets",
   "version": "0.0.0-development",
   "description": "Style Dictionary transforms to add support for sets for things like responsive design.",
   "main": "index.js",
