chore: adding support for semantic releases to be automated

--- a/.releaserc
+++ b/.releaserc
@@ -1,3 +1,9 @@
 {
-  "branches": ["main", "next"]
+  "branches": ["main", "next"],
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/github",
+    "@semantic-release/npm",
+  ]
 }
