--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Release
 on:
   push:
     branches:
@@ -9,6 +9,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - run: yarn add husky
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v2
         env:
