--- a/.releaserc
+++ b/.releaserc
@@ -3,7 +3,14 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    "@semantic-release/github",
-    "@semantic-release/npm",
+    [
+      "@semantic-release/github",
+      {
+        "assets": [
+          { "path": "json-sets-formatter.js", "label": "JSON Sets Formatter" }
+        ]
+      }
+    ],
+    "@semantic-release/npm"
   ]
 }
