--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,11 +4,13 @@ on:
     branches:
       - 'main'
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Install modules
+        run: yarn
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v2
         env:
