--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Style Dictionary transforms to add support for sets for things like responsive design.",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "test-watch": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand --watch",
+    "test": "jest",
+    "test-watch": "jest --runInBand --watch",
     "pre-commit": "lint-staged",
     "prepare": "husky install",
     "semantic-release": "semantic-release"
@@ -20,10 +20,12 @@
     "url": "https://github.com/GarthDB/style-dictionary-sets-transform/issues"
   },
   "homepage": "https://github.com/GarthDB/style-dictionary-sets-transform#readme",
+  "dependencies": {
+    "deepmerge": "^4.2.2"
+  },
   "devDependencies": {
     "@commitlint/cli": "^16.2.0",
     "@commitlint/config-conventional": "^16.2.1",
-    "deepmerge": "^4.2.2",
     "fs-extra": "^10.0.1",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
