--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,17 +2,23 @@ name: Release
 on:
   push:
     branches:
-      - 'main'
+      - "main"
+      - "beta"
+      - "next-major"
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16.x"
       - name: Install modules
         run: yarn
       - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v2
+        uses: cycjimmy/semantic-release-action@v3
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
